# Real_Time_Edge_Detection_Viewer

./: README.md
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/example/real_time_edge_detection_viewer/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-opengl.cpp
app/app/src/main/java/com/example/real_time_edge_detection_viewer/: GLRenderer.java  MainActivity.java  MainActivity.kt
app/app/src/main/java/com/example/real_time_edge_detection_viewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/example/real_time_edge_detection_viewer/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
web-viewer/: index.html  main.ts  styles.css  tsconfig.json
